--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
         <ul>
             <li><h4>Null</h4>
                 <ul>
-                    <li>Looking forword for internships</li>
-                    <li><a href=https://linktr.ee/rudrabiswas >contract</a>  if interested. </li>
+                    <li>Looking foreword for Internships</li>
+                    <li><a href=https://linktr.ee/rudrabiswas >contact</a>  if interested. </li>
 
                 </ul>
 
             </li>
             <li><h4>Exabyte(2023) Volunteer</h4>
             <ul>
-                <li>Had been Volunteer of 4 events in <a href="https://exabyte.sxccal.edu/screens/LandingScreen/index.html">Exabite (2023)</a> . </li>
+                <li>Had been Volunteer of 4 events in <a href="https://exabyte.sxccal.edu/screens/LandingScreen/index.html">eXabyte (2023)</a> . </li>
             </ul></li>
         </ul>
         <hr />
         <h2>Skills</h2>
         <ul>
             <li>C & C++ : Beginner Level</li>
-            <li>Java : Biginner Level</li>
-            <li>HTML : intermediate Level
+            <li>Java : Beginner Level</li>
+            <li>HTML : Intermediate Level
                 <ul>
                     <li>Currently working on HTML</li>
                     <li>Next CSS </li>
-                    <li>Then javaScript</li>
+                    <li>Then JavaScript</li>
                 </ul>
             </li>
         </ul>
@@ -53,7 +53,7 @@
         <hr />
         <h2>Other</h2>
         <ul>
-            <li><a href=https://linktr.ee/rudrabiswas >Contract Me</a> </li>
+            <li><a href=https://linktr.ee/rudrabiswas >Contact Me</a> </li>
         </ul>
         <footer>
             @ Rudra Biswas. All rights reserved. 2nd Project.
