--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <hr />
         <h2>Education</h2>
         <ul>
-            <li>Bachelor of Science , St. Xavier's College Kolkata (Park Street Campus)</li>
+            <li>Pursuing Bachelor of Science in Computer Science, St. Xavier's College Kolkata (Park Street Campus)</li>
         </ul>
         <hr />
         <h2>Work Experience</h2>
         <ul>
             <li><h4>Null</h4>
                 <ul>
-                    <li>Looking foreword for Internships</li>
+                    <li>Looking forward for Internships</li>
                     <li><a href=https://linktr.ee/rudrabiswas >contact</a>  if interested. </li>
 
                 </ul>
